public/styles/projects.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #0f0f0f;
}

/* Title Styling */
.projects-title {
    text-align: center;
    font-size: 5rem;
    margin-top: 20px;
    font-family: "Jacquard 12", sans-serif;
    color: white;
    display: inline-block;
    padding: 10px 20px;
    border-radius: 8px;
}

/* Projects Grid */
.projects-container {
    width: 85%;
    padding: 20px;
    color: white;
}

#projects-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
}

.project-item {
    background-color: grey;
    padding: 15px;
    text-align: center;
    border-radius: 5px;
    cursor: pointer;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.project-item img {
    width: 100%;
    height: auto;
    border-radius: 5px;
}

/* Popup Styling */
.popup {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    justify-content: center;
    align-items: center;
}

.popup-content {
    background: grey;
    padding: 40px;
    width: 70%;
    max-height: 80%;
    overflow-y: auto;
    position: relative;
    border-radius: 5px;
}

/* Popup Fonts */
.popup-title {
    font-family: "Jacquard 12", sans-serif;
    font-size: 2.5rem;
    text-align: center;
    margin-bottom: 10px;
}

.popup-year, .popup-note {
    font-family: "Jacquarda Bastarda 9", sans-serif;
    font-size: 1.5rem;
    text-align: center;
    margin-bottom: 15px;
}

#popup-description {
    font-family: "Jacquarda Bastarda 9", sans-serif;
    font-size: 1.5rem;
    padding: 10px;
    line-height: 1.5;
}

#popup-description p {
    margin-bottom: 20px; 
}

.close-popup {
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 24px;
    cursor: pointer;
}

/* Popup Grid */
.popup-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 15px;
}

.popup-grid img {
    width: 90%;
    height: auto;
    border-radius: 5px;
}

